--- a/install.yaml
+++ b/install.yaml
@@ -6,14 +6,14 @@
     - base
     - role: gantsign.oh-my-zsh
       users:
-        - username: test
+        - username: "{{ lookup('env', 'USER') }}"
     - role: java
       vars:
-        versions: ['8', '11', '17']
-        default: '17'
+        versions: ["8", "11", "17"]
+        default: "17"
     - role: maven
       vars:
-        versions: ['3.8.4', '3.6.3', '3.5.4']
-        default: '3.8.4'
+        versions: ["3.8.4", "3.6.3", "3.5.4"]
+        default: "3.8.4"
     - role: docker
       become: true
