fix base role step naming

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -53,7 +53,7 @@
     path: ~/.zshrc
   when: zsh.stat.exists
 
-- name: install required
+- name: install basic packages
   become: true
   ansible.builtin.apt:
     force_apt_get: yes
