--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -35,7 +35,6 @@
   loop:
     - multipass
     - brave
-    - spotify
   become: true
 
 - name: install snap classic snaps
@@ -48,6 +47,7 @@
     - datagrip
     - kubectl
     - helm
+    - aws-cli
   become: true
 
 - name: create workspace directory
@@ -152,3 +152,4 @@
       kubernetes-replicator: https://helm.mittwald.de
       minio: https://charts.min.io/
       minio-op: https://operator.min.io/
+      jenkinsci: https://charts.jenkins.io/
