--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -27,9 +27,12 @@
 
 - name: install docker-ce
   ansible.builtin.apt:
-    pkg: docker-ce
+     pkg: "{{ item }}"
     state: latest
     update_cache: yes
+  loop:
+    - docker-ce
+    - docker-compose-plugin
 
 - name: install docker python module
   ansible.builtin.pip:
