--- a/install.yaml
+++ b/install.yaml
@@ -6,7 +6,8 @@
     - role: gantsign.oh-my-zsh
       users:
         - username: "{{ lookup('env', 'USER') }}"
-    - base
+    - role: base
+      tags: ["base"]
     - role: java
       vars:
         versions: ["8", "11", "17"]
